5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2498.log
== TEST (2019-05-09 19:03:58) 
-- CODE:
a=int(input("Pessoinhas A: "))
b=int(input("Pessoinhas B: "))
A=float(input("Pessoinhas% AA: "))
B=float(input("Pessoinhas% BB: "))
percentualA=A/100 #percentual de crescimento
percentualB=B/100
anos=0
while(a>b):
	crescimentoA=a*percentualA
	crescimentoB=b*percentualB
	a=a+crescimentoA
	b=b+crescimentoB
	anos=anos+1
print(anos)

-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:05:18) 
-- CODE:
a=int(input("Pessoinhas A: "))
b=int(input("Pessoinhas B: "))
A=float(input("Pessoinhas% AA: "))
B=float(input("Pessoinhas% BB: "))
percentualA=A/100 #percentual de crescimento
percentualB=B/100
anos=0
ppa=a
ppb=b
while(a>b):
	crescimentoA=ppa*percentualA
	crescimentoB=ppb*percentualB
	ppa=ppa+crescimentoA
	ppb=ppb+crescimentoB
	anos=anos+1
print(anos)

-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:06:21) 
-- CODE:
a=int(input("Pessoinhas A: "))
b=int(input("Pessoinhas B: "))
A=float(input("Pessoinhas% AA: "))
B=float(input("Pessoinhas% BB: "))
percentualA=A/100 #percentual de crescimento
percentualB=B/100
anos=0
ppa=a
ppb=b
while(ppa>ppb):
	crescimentoA=ppa*percentualA
	crescimentoB=ppb*percentualB
	ppa=ppa+crescimentoA
	ppb=ppb+crescimentoB
	anos=anos+1
print(anos)

-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:07:59) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
A=float(input("Pessoinhas AA: "))
B=float(input("Pessoinhas BB: "))
percentualA=A/100 #percentual de crescimento
percentualB=B/100
anos=0
ppa=ha
ppb=hb
while(ppa>ppb):
	crescimentoA=ppa*percentualA
	crescimentoB=ppb*percentualB
	ppa=ppa+crescimentoA
	ppb=ppb+crescimentoB
	anos=anos+1
print(anos)

-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:08:06) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
A=float(input("Pessoinhas AA: "))
B=float(input("Pessoinhas BB: "))
percentualA=A/100 
percentualB=B/100
anos=0
ppa=ha
ppb=hb
while(ppa>ppb):
	crescimentoA=ppa*percentualA
	crescimentoB=ppb*percentualB
	ppa=ppa+crescimentoA
	ppb=ppb+crescimentoB
	anos=anos+1
print(anos)

-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:10:44) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
pa=float(input("percentual a: "))
pb=float(input("percentual b: "))
tca=pa/100 
tcb=pb/100
anos=0
ppa=ha
ppb=hb
while(ppb>ppa):
	crescimentoA=ppa*pa
	crescimentoB=ppb*pb
	ppa=ppa+crescimentoA
	ppb=ppb+crescimentoB
	anos=anos+1
print(anos)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:12:31) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
pa=float(input("percentual a: "))
pb=float(input("percentual b: "))
tca=pa/100 
tcb=pb/100
anos=0
ppa=ha
ppb=hb
while(ppb>ppa):
	ca=ppa*pa
	cb=ppb*pb
	ppa=ppa+ca
	ppb=ppb+cb
	anos=anos+1
print(anos)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:13:25) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
pa=float(input("percentual a: "))
pb=float(input("percentual b: "))
tca=pa/100 
tcb=pb/100
anos=0
ppa=ha
ppb=hb
while(ppb>ppa):
	ca=ppa*tca
	cb=ppb*tcb
	ppa=ppa+ca
	ppb=ppb+cb
	anos=anos+1
print(anos)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:17:55) 
-- CODE:
ha=int(input("numero de hab da cidade a: "))
hb=int(input("numero de hab da cidade b: "))
pa=float(input("percentual a: "))
pb=float(input("percentual b: "))
tca=pa/100 
tcb=pb/100
anos=0
ppa=ha
ppb=hb
while(ppb>ppa):
	ca=ppa*tca
	cb=ppb*tcb
	ppa=ppa+ca
	ppb=ppb+cb
	anos=anos+1
print(anos)

#taxa de crescimento = percentual de crescimento/100
#crescimento = numero de habitantes *taxa de crecimento
#ercentual de crescimento= percentual de crescimento+crescimento

-- EXECUTION TIME:
0.219681
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
